<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_go_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/go_home"
            android:checked="true"/>
<!--        <item-->
<!--            android:id="@+id/action_raise_alert"-->
<!--            android:icon="@drawable/ic_raise_alert"-->
<!--            android:title="@string/raise_alert"-->
<!--            android:checked="true"/>-->
        <item
            android:id="@+id/action_tag_contact"
            android:icon="@drawable/ic_person"
            android:title="@string/action_tag_contact"/>
        <item
            android:id="@+id/action_alerts"
            android:icon="@drawable/ic_raise_alert"
            android:title="@string/alerts_menu"/>
        <item
            android:id="@+id/action_edit_profile"
            android:icon="@drawable/ic_edit_profile"
            android:title="@string/action_edit_profile" />


    </group>

</menu>