<?xml version="1.0" encoding="utf-8"?>
<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".AlertFragment">-->

<!--    &lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;-->
<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:text="@string/hello_blank_fragment" />-->

<!--</FrameLayout>-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AlertFragment"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            android:gravity=""
            android:src="@mipmap/citispy" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:padding="1dp"
            android:text="@string/instruction"
            android:textColor="@android:color/primary_text_light"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#B7FDEC"
            android:layout_marginHorizontal="10dp">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:id="@+id/alert_type"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/select_alert_type"
                android:textColor="#7A3E2C"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginHorizontal="20dp"
                android:layout_below="@+id/alert_type">
                <RelativeLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">
                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/fire_alert"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/fire_alert_string"
                        />
                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/accident_alert"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/accident_string"
                        android:layout_below="@+id/fire_alert"/>

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:id="@+id/crime_alert"
                        android:text="@string/crime_alert"
                        android:layout_below="@id/accident_alert"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="50dp">
                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/health_alert"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/health_emergency"/>

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:layout_width="wrap_content"
                        android:id="@+id/other_alert"
                        android:layout_height="30dp"
                        android:text="@string/other_alert"
                        android:layout_below="@id/health_alert"/>
                </RelativeLayout>
            </TableRow>
        </RelativeLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="20dp">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/tag_contacts_string"
                android:textColor="#7A3E2C"
                android:textStyle="italic"
                android:textSize="20sp"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkboxTagContacts"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/tagUsers"
                android:layout_marginStart="10dp"
                android:textSize="20sp"/>
        </TableRow>


        <ProgressBar
            android:id="@+id/progressBarAlert"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="130dp"
            android:layout_height="130dp"
            app:cornerRadius="50dp"
            android:text="@string/alert_button"
            app:icon="@drawable/ic_raise_alert"
            android:backgroundTint="@android:color/holo_red_light"
            android:id="@+id/raise_alert_btn" />
        <!--    <Button-->
        <!--        android:id="@+id/buttonRaiseAlert"-->
        <!--        android:layout_width="140dp"-->
        <!--        android:layout_height="140dp"-->
        <!--        android:layout_marginTop="25dp"-->
        <!--        android:background="@color/colorPrimaryDark"-->
        <!--        android:text="@string/alert_button"-->
        <!--        android:textColor="@android:color/white"-->
        <!--        android:textSize="18sp" />-->
    </LinearLayout>
</layout>