<?xml version="1.0" encoding="utf-8"?>
<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".AlertFragment">-->

<!--    &lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;-->
<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:text="@string/hello_blank_fragment" />-->

<!--</FrameLayout>-->
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AlertFragment"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"

            android:contentDescription="@string/app_name"
            android:gravity=""
            android:src="@mipmap/citispy" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/instruction"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"/>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginHorizontal="20dp">
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkboxTagContacts"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:text="@string/tagUsers" />
            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:text="@string/tad_admin"
                android:checked="true"/>
        </TableRow>


        <ProgressBar
            android:id="@+id/progressBarAlert"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:visibility="gone" />
        <com.google.android.material.button.MaterialButton
            android:layout_width="130dp"
            android:layout_height="130dp"
            app:cornerRadius="50dp"
            android:text="@string/alert_button"
            app:icon="@drawable/ic_raise_alert"
            android:backgroundTint="@android:color/holo_red_light"/>
        <!--    <Button-->
    <!--        android:id="@+id/buttonRaiseAlert"-->
    <!--        android:layout_width="140dp"-->
    <!--        android:layout_height="140dp"-->
    <!--        android:layout_marginTop="25dp"-->
    <!--        android:background="@color/colorPrimaryDark"-->
    <!--        android:text="@string/alert_button"-->
    <!--        android:textColor="@android:color/white"-->
    <!--        android:textSize="18sp" />-->
</LinearLayout>