<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_profile"
        android:contentDescription="Profile" />

    <TableRow android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_first_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/first_name_hint"
            android:inputType="textPersonName"
            android:padding="20dp"
            android:textColor="@android:color/widget_edittext_dark"
            android:layout_column="1"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_hint"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textColor="@android:color/widget_edittext_dark"
            android:layout_column="2"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_phone_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:padding="16dp"
            android:textColor="@android:color/widget_edittext_dark" />
    </TableRow>

</LinearLayout>